@@ -21,7 +21,6 @@ package org.checkstyle.suppressionxpathfilter.blocks;
 
 import java.io.File;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -55,7 +54,7 @@ public class XpathRegressionAvoidNestedBlocksTest extends AbstractXpathTestSuppo
                     AvoidNestedBlocksCheck.MSG_KEY_BLOCK_NESTED),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/CLASS_DEF"
                         + "[./IDENT[@text='InputXpathAvoidNestedBlocksEmpty']]"
                         + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='empty']]/SLIST/SLIST"
@@ -78,7 +77,7 @@ public class XpathRegressionAvoidNestedBlocksTest extends AbstractXpathTestSuppo
                     AvoidNestedBlocksCheck.MSG_KEY_BLOCK_NESTED),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/CLASS_DEF"
                         + "[./IDENT[@text='InputXpathAvoidNestedBlocksVariable']]"
                         + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='varAssign']]/SLIST/SLIST"
@@ -130,7 +129,7 @@ public class XpathRegressionAvoidNestedBlocksTest extends AbstractXpathTestSuppo
                     AvoidNestedBlocksCheck.MSG_KEY_BLOCK_NESTED),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/CLASS_DEF[./IDENT"
                         + "[@text='InputXpathAvoidNestedBlocksAllowedInSwitchCase"
                         + "']]/OBJBLOCK/METHOD_DEF[./IDENT[@text='s']]"
