@@ -20,7 +20,6 @@
 package org.checkstyle.suppressionxpathfilter.coding;
 
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -57,7 +56,7 @@ public class XpathRegressionUnnecessarySemicolonAfterOuterTypeDeclarationTest
         };
 
         final List<String> expectedXpathQueries =
-                Collections.singletonList("/COMPILATION_UNIT/SEMI");
+                List.of("/COMPILATION_UNIT/SEMI");
 
         runVerifications(moduleConfig, fileToProcess, expectedViolation, expectedXpathQueries);
     }
@@ -74,7 +73,7 @@ public class XpathRegressionUnnecessarySemicolonAfterOuterTypeDeclarationTest
         };
 
         final List<String> expectedXpathQueries =
-                Collections.singletonList("/COMPILATION_UNIT/SEMI");
+                List.of("/COMPILATION_UNIT/SEMI");
 
         runVerifications(moduleConfig, fileToProcess, expectedViolation, expectedXpathQueries);
     }
