@@ -21,7 +21,6 @@ package com.puppycrawl.tools.checkstyle.internal.testmodules;
 
 import java.io.File;
 import java.io.Serial;
-import java.util.Collections;
 import java.util.List;
 
 import com.puppycrawl.tools.checkstyle.ant.CheckstyleAntTask;
@@ -30,7 +29,7 @@ public class CheckstyleAntTaskStub extends CheckstyleAntTask {
 
     @Override
     protected List<File> scanFileSets() {
-        return Collections.singletonList(new MockFile());
+        return List.of(new MockFile());
     }
 
     private static final class MockFile extends File {
